--- a/7-segunda_pre_entrega/package.json
+++ b/7-segunda_pre_entrega/package.json
@@ -12,13 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.4",
+    "express-handlebars": "^7.0.7",
+    "handlebars": "^4.7.7",
     "mongoose": "^7.0.3",
+    "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "update": "^0.7.4"
   }
 }
